--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="container">
       <header>
         <nav>
-          <a href="services.html">Services</a>
-          <a href="">Product</a>
-          <a href="">Vision</a>
-          <a href="">Features</a>
-          <a href="">About</a>
-          <a href="">Contact</a>
+          <a href="services.html" class="links">Services</a>
+          <a href="" class="links">Product</a>
+          <a href="" class="links">Vision</a>
+          <a href="" class="links">Features</a>
+          <a href="" class="links">About</a>
+          <a href="" class="links last">Contact</a>
           <a href="" class="logo"
             ><img src="img/logo.png" alt="Great Idea! Company logo."
           /></a>
